--- a/.pylintrc
+++ b/.pylintrc
@@ -148,7 +148,8 @@ disable=print-statement,
         too-many-locals,
         broad-except,
         too-many-statements,
-        logging-format-interpolation
+        logging-format-interpolation,
+        raise-missing-from
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
